examples/test/testpolicy17599.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17599
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key25: value13
      key3: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value5
          key10: value15
      podSelector:
        matchLabels:
          key34: value42
